--- a/my-medusa-store/package.json
+++ b/my-medusa-store/package.json
@@ -17,19 +17,24 @@
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
     "dev": "medusa develop",
+    "worker": "ts-node src/scripts/worker.ts",
+    "test:elasticsearch": "ts-node src/scripts/test-elasticsearch.ts",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^9.2.0",
     "@medusajs/admin-sdk": "2.11.3",
     "@medusajs/cli": "2.11.3",
     "@medusajs/framework": "2.11.3",
-    "@medusajs/medusa": "2.11.3"
+    "@medusajs/medusa": "2.11.3",
+    "bullmq": "^5.13.0",
+    "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.11.3",
-    "@swc/core": "1.5.7",
+    "@swc/core": "^1.7.28",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.0.0",
