--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,16 @@ services:
       retries: 5
       start_period: 10s
 
-
+  python-embedder:
+    build:
+      context: ./python-embedder
+      dockerfile: Dockerfile
+    container_name: python-embedder
+    ports:
+      - "8000:8000"      
+    environment:
+      # optional, but nice to keep logs unbuffered
+      - PYTHONUNBUFFERED=1
 
   redis:
     image: redis:6-alpine
@@ -56,6 +65,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+  
 
 volumes:
   medusa-data: {}
