--- a/my-medusa-store/package.json
+++ b/my-medusa-store/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
+    "products": "medusa exec ./src/scripts/products.ts",
     "start": "medusa start",
     "dev": "medusa develop",
     "worker": "ts-node src/scripts/worker.ts",
