--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Unit Tests CI
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, ci-pipeline]
   pull_request:
     branches: [main, develop]
 
